Cloud Formation/modules/route_table/route_table.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: "Route Table for Public and Private Subnets"

Parameters:
  InternetGatewayId:
    Type: String
  VpcId:  # Sử dụng đúng tên tham số VpcId thay vì VPCID
    Type: String
  PublicSubnetID:
    Type: String
  PrivateSubnetID:
    Type: String
  UniqueName:
    Type: String
  NATGatewayId:
    Type: String
    Description: "ID of the NAT Gateway"

Resources:
  # Public Route Table
  PublicRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VpcId  # Tham chiếu đúng tham số VpcId
      Tags:
        - Key: Name
          Value: !Ref UniqueName

  PublicRoute:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGatewayId

  PublicSubnetRouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref PublicSubnetID  # Tham chiếu đúng tham số PublicSubnetID
      RouteTableId: !Ref PublicRouteTable
  PrivateRoute:
    Type: "AWS::EC2::Route"
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: "0.0.0.0/0"  # Tất cả lưu lượng ra ngoài
      NatGatewayId: !Ref NATGatewayId
  # Private Route Table
  PrivateRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VpcId  # Tham chiếu đúng tham số VpcId
      Tags:
        - Key: Name
          Value: !Ref UniqueName

  PrivateSubnetRouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref PrivateSubnetID  # Tham chiếu đúng tham số PrivateSubnetID
      RouteTableId: !Ref PrivateRouteTable

Outputs:
  PublicRouteTableId:
    Value: !Ref PublicRouteTable
  PrivateRouteTableId:
    Value: !Ref PrivateRouteTable
